<resources>
    <string name="app_name">易助</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_actionBar_login">LOGIN</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="title_activity_set_password">setPasswordActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_sosmap">SOSMapActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="title_activity_sosreceive_map">SOSReceiveMapActivity</string>
    <string name="title_activity_question_send">QuestionSendActivity</string>
    <string name="title_activity_help_map">HelpMapActivity</string>
    <string name="title_activity_help_submit">HelpSubmitActivity</string>
    <string name="title_fragment_sos_view">求救</string>
    <string name="title_fragment_help_view">求助</string>
    <string name="title_fragment_question_view">问题</string>
    <string name="title_fragment_neighbors_view">附近的事</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help_receive_map">HelpReceiveMapActivity</string>
    <string name="title_activity_question_receive">QuestionReceiveActivity</string>
    <string name="title_activity_setting_menu">SettingMenuActivity</string>
    <string name="title_activity_account_reset">AccountResetActivity</string>

    <string name="mes_accept_push_or_not">是否接受推送消息</string>
    <string name="mes_privacy_setting">隐私设置</string>
    <string name="mes_account_safe">账户与安全</string>
    <string name="mes_version_update">版本更新</string>
    <string name="mes_about_us">关于我们</string>
    <string name="mes_exit">退出登录</string>

    <string name="mes_accept_push_or_not">是否接受推送消息</string>
    <string name="mes_privacy_setting">隐私设置</string>
    <string name="mes_account_safe">账户与安全</string>
    <string name="mes_version_update">版本更新</string>
    <string name="mes_about_us">关于我们</string>
    <string name="mes_exit">退出登录</string>
    <string name="title_activity_answer_send">AnswerSendActivity</string>
</resources>
